add blacklist setting to config screen